--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.15",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.0.4",
+    "eslint-plugin-prettier": "^5.2.6",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "typescript": "^5"
